# bioactivity_data_acquisition

./: .bandit  .banditignore  .coverage.DESKTOP-AITNV0T.34948.XZZGSWQx  .coverage.DESKTOP-AITNV0T.36832.XRUyybgx  .cursorignore  .cursorrules  .dockerignore  .env.example  .env.key.template  .gitattributes  .gitignore  .importlinter  .jscpd.json  .lychee.toml  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pymarkdown.json  .safety_policy.yaml  .secrets.baseline  99-data-sources-and-data-spec.md  ACTIVITY_PIPELINE_REVIEW.md  API_KEYS_SETUP.md  ASSAY_IMPLEMENTATION_REPORT.md  ASSESSMENT.md  AUDIT_DIFF.md  AUDIT_FILETREE.md  CASE_SENSITIVITY_FIX_SUMMARY.md  CHANGELOG.md  CHECKLIST.md  CHECKLIST_postprocess_documents.md  CHEMBL_OPTIMIZATION_REPORT.md  CLEANUP_LIST.md  CLEANUP_MANIFEST.json  CLEANUP_REPORT.md  CLI_INTEGRATION_SNIPPET.py  CODE_CLEANUP_ACTIONS.md  CONTRADICTIONS.md  ChEMBL_Data_Extraction_Protocol_v2.3 (1).md  (+212 more)
.cursor/: commands.json  (+2 more)
configs/: README.md  base.yaml  chembl_dictionaries.yaml  config.example.yaml  config.template.yaml  config.yaml  config_activities_v2.yaml  config_activity.yaml  config_activity_full.yaml  config_assay.yaml  config_assay_full.yaml  config_assays_v2.yaml  config_chembl_only.yaml  config_document.yaml  config_documents.yaml  config_documents_full.yaml  config_documents_test.yaml  config_documents_v2.yaml  config_enhanced_qc.yaml  config_target.yaml  config_target_full.yaml  config_targets_v2.yaml  config_test.yaml  config_testitem.yaml  config_testitem_full.yaml  config_testitems_v2.yaml  config_with_semantic_scholar.yaml  default.yml  docker-compose.override.yml.example  example.yaml  failure_codes.yaml  inventory.yaml  logging.yaml  logging_windows.yaml  mkdocs.yml  naming_exceptions.yaml  pipelines.toml  postprocess_documents.example.yaml  pyproject.toml  pytest-benchmark.ini  (+1 more)
configs/defaults/: base.yaml  chembl.yaml  determinism.yaml  logging.yaml  network.yaml  output.yaml  postprocess.yaml  sources.yaml  validation.yaml
configs/dictionaries/: action_type.yaml  activity_relation.yaml  activity_standard_type.yaml  activity_units.yaml  assay_type.yaml  bao_format.yaml  cell_line_terms.yaml  confidence_score.yaml  data_validity_comment.yaml  document_type.yaml  organism_taxon.yaml  source_system.yaml  standard_units.yaml  status.yaml  target_type.yaml  tissue_terms.yaml
configs/dictionary/_target/: _IUPHAR_family.csv
configs/dictionary/_target/_IUPHAR/: _IUPHAR_target.csv
configs/includes/: chembl_source.yaml  determinism_defaults.yaml
configs/pipelines/: activity.yaml  assay.yaml  document.yaml  target.yaml  testitem.yaml
configs/pipelines/activity/: activity_chembl.yaml
configs/pipelines/assay/: assay_chembl.yaml
configs/pipelines/chembl/: activity.yaml  activity_chembl.yaml  assay.yaml  assay_chembl.yaml  document.yaml  document_chembl.yaml  target.yaml  target_chembl.yaml  testitem.yaml  testitem_chembl.yaml
configs/pipelines/document/: document_chembl.yaml
configs/pipelines/testitem/: testitem_chembl.yaml
configs/profiles/: base.local.yaml  base.yaml  chembl.yaml  common_chembl.yaml  determinism.yaml  dev.yaml  network.yaml  postprocess.yaml  prod.yaml  sources.yaml  test.yaml  validation.yaml
configs/site/: 404.html  index.html  objects.inv  sitemap.xml
configs/site/ASSAY_IMPLEMENTATION_REPORT/: index.html
configs/site/CHEMBL_OPTIMIZATION_REPORT/: index.html
configs/site/CODE_CLEANUP_ACTIONS/: index.html
configs/site/CODE_CLEANUP_ANALYSIS/: index.html
configs/site/DOCS_INVENTORY/: index.html
configs/site/GIT_LFS_WORKFLOW/: index.html
configs/site/LOGGING_FIX_REPORT/: index.html
configs/site/SECURITY_main/: index.html
configs/site/STYLE_GUIDE/: index.html
configs/site/_templates/explanation_template/: index.html
configs/site/_templates/how-to_template/: index.html
configs/site/_templates/reference_template/: index.html
configs/site/_templates/staging_template/: index.html
configs/site/_templates/tutorial_template/: index.html
configs/site/api/: index.html
configs/site/architecture/: index.html
configs/site/archive/: index.html
configs/site/archive/ASSESSMENT/: index.html
configs/site/archive/CASE_SENSITIVITY_FIX_SUMMARY/: index.html
configs/site/archive/CHECKLIST/: index.html
configs/site/archive/CHECKLIST_postprocess_documents/: index.html
configs/site/archive/CLEANUP_REPORT/: index.html
configs/site/archive/DOCS_AUDIT/: index.html
configs/site/archive/DOCS_CHECKLIST/: index.html
configs/site/archive/IMPROVEMENT_PLAN/: index.html
configs/site/archive/LOGGING_AUDIT/: index.html
configs/site/archive/LOGGING_CHANGE_PLAN/: index.html
configs/site/archive/LOGGING_IMPLEMENTATION_REPORT/: index.html
configs/site/archive/REFORM_PLAN/: index.html
configs/site/archive/STAGE11_COMPLETION_REPORT/: index.html
configs/site/changelog/: index.html
configs/site/ci/: index.html
configs/site/cli/: index.html
configs/site/data_qc/: index.html
configs/site/enrichment/: index.html
configs/site/explanations/: index.html
configs/site/extraction-contract/: index.html
configs/site/faq/: index.html
configs/site/glossary/: index.html
configs/site/how-to/: index.html
configs/site/inventory/: index.html
configs/site/logging/: index.html
configs/site/non-goals/: index.html
configs/site/normalization/: index.html
configs/site/output-artifacts/: index.html
configs/site/persistence/: index.html
configs/site/reference/: index.html
configs/site/search/: search_index.json
configs/site/security/: index.html
configs/site/star-schema/: index.html
configs/site/tests/: index.html
configs/site/tutorials/: index.html
configs/site/validation/: index.html
configs/templates/: .env.ci.template  .env.dev.template  .env.local.template
configs/tools/: http_client.yaml
project/: .gitignore  README.md  __init__.py  pyproject.toml
project/config/: pipeline.example.yaml
project/scripts/: fetch_publications.py
project/tests/: test_cli.py  test_cli_pipeline.py  test_normalize.py  test_utils_joins.py
(+3336 files in other folders)
