[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioactivity-data-acquisition"
version = "0.1.0"
description = "ETL pipeline for ChEMBL bioactivity data"
readme = "README.md"
authors = [{ name = "Bioactivity Team" }]
requires-python = ">=3.10"
dependencies = [
    "backoff>=2.2",
    "defusedxml>=0.7",
    "pandas>=2.1",
    "pandera[io]>=0.18",
    "requests>=2.31",
    "structlog>=24.1",
    "typer[all]>=0.9",
    "pydantic>=1.10",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "jsonschema>=4.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-requests>=0.42",
    "opentelemetry-exporter-jaeger>=1.17",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "mypy>=1.8",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "responses>=0.25",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "pandera[mypy]>=0.18",
    "types-PyYAML>=6.0",
    "safety>=3.0",
    "bandit>=1.7",
]

[project.scripts]
bioactivity-data-acquisition = "library.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=library --cov=tests --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
markers = [
    "benchmark: mark test as a benchmark",
    "integration: mark test as integration test requiring real API access",
    "slow: mark test as slow running",
    "network: mark test as requiring network access",
    "api: mark test as requiring API access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
omit = [
    "src/library/io_/normalize.py",
]

[tool.black]
target-version = ["py310"]
line-length = 180

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "E712"]
"src/scripts/**" = ["E501", "E712", "E402"]
"src/library/tools/**" = ["E501"]
"src/library/etl/qc.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
strict = true
plugins = ["pandera.mypy"]
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pandas.*", "pandera.*", "typer", "structlog"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.benchmark]
save = "benchmark_results.json"
save_data = true
autosave = true
format = "json"
sort = "mean"
compare = "benchmark_results.json"
compare_fail = "mean:20%"
warmup = true
warmup_iterations = 1
min_rounds = 5
max_time = 10.0
verbose = true
disable_gc = true
