[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-publications-etl"
version = "0.1.0"
description = "ETL pipeline for fetching and normalising publication metadata from multiple sources."
readme = "README.md"
authors = [{name = "Bioactivity Data Engineering", email = "data@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "requests-cache>=1.1",
    "backoff>=2.2",
    "pandas>=2.0",
    "pandera>=0.17",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "responses>=0.25",
    "mypy>=1.6",
    "ruff>=0.1.7",
]

[project.scripts]
fetch-publications = "project.scripts.fetch_publications:app"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "BLE", "SIM"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

