[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-publications-etl"
version = "0.1.0"
description = "ETL pipeline for fetching and normalising publication metadata from multiple sources"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ETL Team", email = "etl@example.com" }]
dependencies = [
  "backoff>=2.2",
  "pandas>=2.1",
  "pandera>=0.16",
  "requests>=2.31",
  "requests-cache>=1.1",
  "structlog>=24.1",
  "typer[all]>=0.9",
  "python-dotenv>=1.0",
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "responses>=0.25",
  "mypy>=1.8",
  "ruff>=0.3",
  "types-requests",
  "types-python-dateutil"
]

[project.scripts]
fetch-publications = "scripts.fetch_publications:app"

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP", "N"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["project/tests"]
